# SiNPle

./: .gitignore  BUILD  INSTALL.txt  README.md  SiNPle.ml  dune-project
testdata/: 5000.per0_6.polio.pcr.fasta.100.bam  5000.per0_6.polio.pcr.fasta.500.bam  5000.per1.polio.pcr.fasta.100.bam  5000.per1.polio.pcr.fasta.500.bam  5000.per5.polio.pcr.fasta.100.bam  5000.per5.polio.pcr.fasta.500.bam  PCR_error_simulator2.R
