(lang dune 3.0)

(name SiNPle)

(generate_opam_files true)

(source
 (github PaoloRibeca/SiNPle))

(authors "Paolo Ribeca")

(maintainers "Paolo Ribeca")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name SiNPle)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
